# football_analysis

./: .gitignore  README.md  claude_mcp_config.json  config.py  docker-compose.yml  fly.staging.toml  fly.toml  mcp_entrypoint.py  pyproject.toml  requirements.txt
.claude/: mcp.json
.github/workflows/: deploy.yml  weekly_sync.yml
agent/: anomaly_detection.py  evaluation.py  football_agent.py  generate_and_store_narratives.py  match_narratives.py  nl_to_sql.py  rag_retrieval.py  tool_handlers.py
airflow/dags/: football_ingestion.py
airflow/plugins/: football_api_client.py
config/: __init__.py  db.py
dbt/: Dockerfile  dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/marts/: mart_bottler_index.sql  mart_league_table.sql  mart_match_results.sql  schema.yml
dbt/models/staging/: schema.yml  stg_competitions.sql  stg_matches.sql  stg_standings.sql  stg_teams.sql
football_analytics/: __init__.py  agent.py  cli.py  config.py
mcp/: Dockerfile  README.md  football_mcp_server.py
scripts/: sync.sh
sql/: init.sql
src/football_analytics/: cli.py  config.py
src/football_analytics/agent/: anomaly_detection.py  evaluation.py  football_agent.py  generate_and_store_narratives.py  match_narratives.py  nl_to_sql.py  rag_retrieval.py  tool_handlers.py
src/football_analytics/mcp/: server.py
tests/: conftest.py  test_evaluation.py  test_mcp_server.py  test_nl_to_sql.py  test_rag_retrieval.py
