[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "football-analytics"
version = "0.1.0"
description = "Football analytics platform with Airflow, dbt, PostgreSQL, MCP and Claude AI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["football", "analytics", "airflow", "dbt", "mcp", "claude", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.40.0",
    "voyageai>=0.3.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sqlparse>=0.5.0",
    "mcp>=1.0.0",
    "pgvector>=0.3.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
airflow = [
    "apache-airflow>=2.9.0",
    "apache-airflow-providers-postgres>=5.0.0",
]
dbt = [
    "dbt-postgres>=1.8.0",
]

[project.scripts]
football-analytics = "football_analytics.cli:main"

[project.urls]
Homepage = "https://github.com/shreyastelkar/football-analytics"
Repository = "https://github.com/shreyastelkar/football-analytics"

[tool.hatch.build.targets.wheel]
packages = ["football_analytics", "agent", "config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
